--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is test chage</h1>
+    <h1>conflict for a branch This is test chage</h1>
     <h1>This is test chage</h1>
     <h1>This is test chage</h1>
 </body>
